--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -8,23 +8,26 @@
     <title>Steak Recipe</title>
 </head>
 <body>
-    <h1><a href="../index.html">Odin Recipes</a></h1>
-    <h2>Steak</h2>
-    <img src="../images/steak.jpg" alt="steak">
-    <h3>Description</h3>
-    <p>Delicious peace of meat cooked</p>
-    <h4>Ingredients</h4>
-    <ul>
-        <li>red wine</li>
-        <li>salt</li>
-        <li>rosemary</li>
-        <li>New York strip steak</li>
-    </ul>
-    <h4>Steps</h4>
-    <ol>
-        <li>Combine the red wine, salt and rosemary in a small bowl. Let stand at room temperature for 2 to 3 hours.</li>
-        <li>Heat a large griddle or cast-iron skillet over high heat. Place the steaks on the hot pan, and cook for about 8 minutes per side, or to desired degree of doneness. The internal temperature should be at least 145 degrees F (62 degrees C) for medium rare. Pour in the wine mixture, and allow it to boil for a minute. Serve steaks with sauce on a deep platter.</li>
-    </ol>
-    
+    <div>
+        <h1><a href="../index.html">Odin Recipes</a></h1>
+        <h2 class="name">Steak</h2>
+    </div>
+    <div class="center">
+        <img src="../images/steak.jpg" alt="steak">
+        <h3>Description</h3>
+        <p>Delicious peace of meat cooked</p>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>red wine</li>
+            <li>salt</li>
+            <li>rosemary</li>
+            <li>New York strip steak</li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Combine the red wine, salt and rosemary in a small bowl. Let stand at room temperature for 2 to 3 hours.</li>
+            <li>Heat a large griddle or cast-iron skillet over high heat. Place the steaks on the hot pan, and cook for about 8 minutes per side, or to desired degree of doneness. The internal temperature should be at least 145 degrees F (62 degrees C) for medium rare. Pour in the wine mixture, and allow it to boil for a minute. Serve steaks with sauce on a deep platter.</li>
+        </ol>
+    </div>
 </body>
 </html>
