--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <link ref="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/pizza.html">Pizza</a></li>
-        <li><a href="./recipes/gyoza.html">Gyoza</a></li>
-        <li><a href="./recipes/steak.html">Steak</a></li>
-    </ul>
+    <div class="list">
+        <div><a href="./recipes/pizza.html">Pizza</a></div>
+        <div><a href="./recipes/gyoza.html">Gyoza</a></div>
+        <div><a href="./recipes/steak.html">Steak</a></div>
+    </div>
     
 </body>
 </html>
