--- a/recipes/gyoza.html
+++ b/recipes/gyoza.html
@@ -8,31 +8,35 @@
     <title>Gyoza Recipe</title>
 </head>
 <body>
-    <h1><a href="../index.html">Odin Recipes</a></h1>
-    <h2>Gyoza</h2>
-    <img src="../images/gyoza.jpg" alt="gyoza">
-    <h3>Description</h3>
-    <p>Asian delicacy. Also known as popstickers.</p>
-    <h4>Ingredients</h4>
-    <ul>
-        <li>ground pork</li>
-        <li>shredded cabbage</li>
-        <li>egg</li>
-        <li>onions</li>
-        <li>soy sauce</li>
-        <li>sake</li>
-        <li>mirin</li>
-        <li>ginger root</li>
-        <li>gyoza wrapper</li>
-        <li>vegetable oil</li>
-        <li>water</li>
-    </ul>
-    <h4>Steps</h4>
-    <ol>
-        <li>Combine ground pork, cabbage, egg, spring onions, 1 tablespoon soy sauce, sake, mirin, and ginger in a large bowl; mix well.</li>
-        <li>Place approximately 1 to 2 teaspoons of the pork mixture in the center of each gyoza wrapper. Moisten your fingers with water and rub around the edges of each wrapper. Fold wrappers in half over filling, creating a semi circle. Take one side of the wrapper and make crimps along the edges for a decorative pattern (like pleats of a skirt) and press along the edges to seal the two sides together. Ensure there isn't much excess air caught inside the dumpling. Repeat until all the pork mixture is used. </li>
-        <li>Heat vegetable oil in a large skillet over medium-high heat. Place as many gyoza in the skillet as fit in a single layer and fry until the bottom is browned, about 3 to 5 minutes. Add water to skillet and reduce heat. Cover and allow gyoza to steam until all the water has evaporated, about 5 minutes. Repeat with the remaining gyoza.</li>
-        <li>Mix rice vinegar and soy sauce together for a dipping sauce and serve with the gyoza.</li>
-    </ol>
+    <div>
+        <h1><a href="../index.html">Odin Recipes</a></h1>
+        <h2 class="name">Gyoza</h2>
+    </div>
+    <div class="center">
+        <img src="../images/gyoza.jpg" alt="gyoza">
+        <h3>Description</h3>
+        <p>Asian delicacy. Also known as popstickers.</p>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>ground pork</li>
+            <li>shredded cabbage</li>
+            <li>egg</li>
+            <li>onions</li>
+            <li>soy sauce</li>
+            <li>sake</li>
+            <li>mirin</li>
+            <li>ginger root</li>
+            <li>gyoza wrapper</li>
+            <li>vegetable oil</li>
+            <li>water</li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Combine ground pork, cabbage, egg, spring onions, 1 tablespoon soy sauce, sake, mirin, and ginger in a large bowl; mix well.</li>
+            <li>Place approximately 1 to 2 teaspoons of the pork mixture in the center of each gyoza wrapper. Moisten your fingers with water and rub around the edges of each wrapper. Fold wrappers in half over filling, creating a semi circle. Take one side of the wrapper and make crimps along the edges for a decorative pattern (like pleats of a skirt) and press along the edges to seal the two sides together. Ensure there isn't much excess air caught inside the dumpling. Repeat until all the pork mixture is used. </li>
+            <li>Heat vegetable oil in a large skillet over medium-high heat. Place as many gyoza in the skillet as fit in a single layer and fry until the bottom is browned, about 3 to 5 minutes. Add water to skillet and reduce heat. Cover and allow gyoza to steam until all the water has evaporated, about 5 minutes. Repeat with the remaining gyoza.</li>
+            <li>Mix rice vinegar and soy sauce together for a dipping sauce and serve with the gyoza.</li>
+        </ol>
+    </div>
 </body>
 </html>
